# libmmap

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  build-deps.sh  build.sh  configure.ac
mmap/: Makefile.am  mmap.h  mmap_clt.c  mmap_clt.h  mmap_clt_pl.c  mmap_clt_pl.h  mmap_dummy.c  mmap_dummy.h  mmap_enc_mat.c  mmap_gghlite.c  mmap_gghlite.h
src/: Makefile.am
tests/: .gitignore  Makefile.am  test_mmap.c  test_mmap_mat.c  write_encoding.c
